# -Smart-Travel

./: README.en.md  README.md
Blind/: local.properties  (+1 more)
Blind/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Blind/app/src/main/: AndroidManifest.xml
Blind/app/src/main/java/com/example/myapplication/: AddDeviceActivity.java  CallActivity.java  MainActivity.java
Blind/app/src/main/java/com/example/myapplication/activity/: AboutActivity.java  CallActivity.java  CameraActivity.java  EnvironmentActivity.java  FeedbackActivity.java  HelpActivity.java  TestActivity.java  VideoCallActivity.java
Blind/app/src/main/java/com/example/myapplication/adapter/: DeviceAdapter.java  DeviceScanAdapter.java
Blind/app/src/main/res/drawable/: bg_device_selected.xml  btn_circle_bg.xml  nav_icon_color_selector.xml
Blind/app/src/main/res/drawable-v24/: rounded_but2.xml
Blind/app/src/main/res/layout/: activity_about.xml  activity_add_device.xml  activity_call.xml  activity_camera.xml  activity_emergency_help.xml  activity_environment.xml  activity_fall_confirm.xml  activity_feedback.xml  activity_help.xml  activity_location.xml  activity_login.xml  activity_main.xml  activity_register.xml  activity_test.xml  activity_user_info.xml  activity_video_call.xml  activity_wake_up.xml  dialog_comment.xml  dialog_device_config.xml  fragment_community.xml  fragment_device.xml  fragment_home.xml  fragment_personal.xml  item_device.xml  item_device_scan.xml
Blind/app/src/main/res/menu/: bottom_nav_menu.xml
Blind/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+163 files in other folders)
